--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/img/Logo.jpg" />
+    <link rel="icon" type="image/svg+xml" href="./src/img/Logo.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LaburandoAndo</title>
+    <title>LaburandoAndo | Portal de Trabajo</title>
   </head>
   <body>
     <div id="root"></div>
