agregue etiquetas meta en index.html, redirects en carpeta public para error de pagina de netlify

--- a/index.html
+++ b/index.html
@@ -2,8 +2,35 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/img/Logo.webp" />
+    <meta
+      name="description"
+      content="LaburandoAndo es tu portal para conectar con profesionales independientes en Argentina. ¡Encuentra el trabajador ideal!"
+    />
+    <meta
+      name="keywords"
+      content="laburandoando, laburando ando, trabajo freelance, profesionales independientes, servicios, Argentina, portal de trabajo"
+    />
+    <link
+      rel="canonical"
+      href="https://www.laburando-ando.netlify.app/"
+    />
+    <meta property="og:title" content="LaburandoAndo | Portal de Trabajo" />
+    <meta
+      property="og:description"
+      content="Conecta con profesionales independientes en LaburandoAndo."
+    />
+    <meta
+      property="og:image"
+      content="https://laburando-ando.netlify.app/src/img/Logo.webp"
+    />
+    <meta
+      property="og:url"
+      content="https://laburando-ando.netlify.app/"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="Bruno Madozzo Romay, Francisco Miguel Perez, Julian Martin, Nicolas Cosme Mas, Flavia Maria Walther" />
+    <link rel="icon" type="image/svg+xml" href="./src/img/Logo.webp" />
     <title>LaburandoAndo | Portal de Trabajo</title>
   </head>
   <body>
